<resources>
    <string name="app_name">give<b>back</b>Rx</string>
    <string name="some_error">Something went wrong. Please Try Later!</string>
    <string name="google_mapkey">AIzaSyA8fz5TPMwrgiyxZEk5U112RlOaQlw9cMo</string>
    <string name="category">Category</string>
    <string-array name="rec_time">
        <item>Time</item>
        <item>Current Week</item>
        <item>Last Week</item>
        <item>Current Month</item>
        <item>Last Month</item>
        <item>Last Year</item>
        <item>Current Year</item>
    </string-array>
    <string-array name="alphabet">
        <item>Alphabet</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>
    <string-array name="medication">
        <item>Medication</item>
    </string-array>
    <string-array name="pharmacy">
        <item>Pharmacy</item>
    </string-array>
    <string-array name="city_state">
        <item>State</item>
        <item>Algeria</item>
    </string-array>
    <string-array name="cities">
        <item>City</item>
    </string-array>
    <string-array name="referrals">
        <item>All</item>
        <item>Accepted</item>
        <item>Pending</item>
        <item>Rejected</item>
    </string-array>
    <string-array name="tasks">
        <item>Active</item>
        <item>Completed</item>
        <item>Overdue</item>
    </string-array>
    <string-array name="quantity">
        <item>Select Quantity</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string name="gender">Gender</string>
    <string-array name="help_ques">
        <item>Charity Selection</item>
        <item>Charity Onboarding</item>
        <item>Coupon Selection</item>
        <item>My Profile</item>
        <item>My Referrals</item>
        <item>Pharmacy</item>
        <item>Sign Up/Sign In</item>
        <item>Other</item>
    </string-array>
    <string-array name="status501">
        <item>Public Charity</item>
        <item>Private Foundation</item>
        <item>Private Operating Foundation</item>
    </string-array>
    <string-array name="payment_method">
        <item>ACH</item>
        <item>Check</item>
    </string-array>
    <string-array name="noitces">
        <item>All</item>
        <item>Unacknowledged</item>
        <item>Acknowledged</item>
    </string-array>
    <string-array name="help">
        <item>All FAQ\'s</item>
        <item>Customer</item>
        <item>Pharmacy</item>
        <item>Charity</item>
        <item>Partner in Care</item>
    </string-array>
    <string-array name="address_type">
        <item>Select Address Type</item>
        <item>Home</item>
        <item>Work</item>
        <item>Shipping Address</item>
        <item>Billing Address</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_this_coupon">Get this Coupon</string>
    <string name="save_per">Save %s</string>
    <string name="discount_near_you">discounts near you</string>
    <string name="best_price_">best price $%s</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="phone_format">(%s) %s-%s</string>
    <string name="be_well_do_good">be well. do good.</string>
    <string name="location_permission_dialog">Allow permission to get you location.</string>
    <string name="terms_policy_text">I authorize give<b>back</b>Rx to use my information as described in the terms &amp; conditions and privacy policy, including sending me additional savings offer and prescription alerts.</string>
    <string name="by_continuing_you_agree_to_givebackrx_s_term_of_service">By continuing, you agree to give<b>back</b>Rx’s\nTerm of Service.</string>
    <string name="updrade_to_givebackrx_gold_for_5_mo">Upgrade to give<b>back</b>Rx gold for $5/mo</string>
    <string name="my_task"><u>My Task</u></string>
    <string name="my_referrals"><u>My Referrals</u></string>
    <string name="my_referral">My Referrals</string>
    <string name="my_notices"><u>My Notices</u></string>
    <string name="pharmacy_list_msg">The savings breakdown is unable to be calculated for this location. give<b>back</b>Rx customers usually enjoy savings up to 80%.</string>
    <string name="terms_silver">I understand that all transactions using my give<b>back</b>Rx %s card will be available to view in my give<b>back</b>Rx portal in compliance with the terms of use. If you would like to make anonymous purchases you should use give<b>back</b>Rx coupons or charity-specific cards in the "Charities" section.</string>
    <string name="givebackrx_news">give<b>back</b>Rx News</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="storage_permission_dialog">Allow permission to Add/Edit picture.</string>
    <string name="donations_from_givebackrx">Donations from give<b>back</b>Rx</string>
    <string name="save_money_and_giveback_to_spread_the_love_simply_print_your_card_or_receive_it_through_email_or_text_show_it_to_your_pharmacist_to_save_money_on_prescriptions_each_time_you_save_givebackrx_will_donate_to_your_charity">Save money and give<b>back</b> to spread the love. Simply print your card, or receive it through email or text. Show it to your pharmacist to save money on prescriptions. Each time you save, give<b>back</b>Rx will donate to your charity.</string>
    <string name="use_the_following_url_when_publishing_your_participation_in_givebackrx_all_users_who_click_this_link_will_be_defaulted_to_your_charity_when_they_sign_up">Use the following URL when publishing your participation in give<b>back</b>Rx. All users who click this link will be defaulted to your charity when they sign up.</string>
    <string name="about_givebackrx_powerpoint">About give<b>back</b>Rx PowerPoint</string>
    <string name="about_givebackrx_letter">About give<b>back</b>Rx Letter</string>
    <string name="by_providing_your_mobile_number_not_only_do_you_agree_to_our_sms_terms_and_conditions_privacy_policy_but_also_to_receiving_your_givebackrx_card_and_promotional_messages_via_text_message_and_data_rates_may_apply_frequency_may_vary_text_stop_to_696337_to_opt_out_or_help_for_help">By providing your mobile number, not only do you agree to our SMS Terms and Conditions, Privacy Policy, but also to receiving your givebackRx card and promotional messages via text. Message and data rates may apply. Frequency may vary. Text STOP to 696337 to opt out or HELP for help.</string>
    <string name="i_would_like_to_receive_text_messages_from_givebackrx_related_to_coupons_and_other_updates">I would like to receive text messages from give<b>back</b>Rx related to coupons and other updates.</string>
    <string name="total_donations_from_givebackrx">Total Donations From give<b>back</b>Rx</string>
    <string name="givebackrx_silver_free">give<b>back</b>Rx silver | Free</string>
    <string name="logout_message">Are you sure you want to sign out of give<b>back</b>Rx?</string>
    <string name="we_re_glad_nyou_re_here_to_ngiveback">We\'re glad\nyou\'re here\nto give<b>back</b>!</string>
    <string name="givebackrx_gold_5_mo">give<b>back</b>Rx gold | $5/mo</string>
    <string name="givebackrx_s_price">give<b>back</b>Rx\'s Price</string>
    <string name="givebackrx_silver">give<b>back</b>Rx silver</string>
    <string name="givebackrx_gold">give<b>back</b>Rx gold</string>
    <string name="givebackrx_gold_">give<b>back</b>Rx Gold</string>
    <string name="goldstring">give<b>back</b>Rx gold</string>
    <string name="silverstring">give<b>back</b>Rx silver</string>
    <string name="upgrade_card_bullet"> \u25CB Use this card for discounts of up to 80% on most prescription drugs at over 65,000 U.S. pharmacies.\n\n \u25CB Get discounts for every member of your family!\n\n \u25CB Gold card will automatically renew monthly.</string>
    <string name="save_up_to_80_on_all_your_prescriptions_using_our_free_silver_card_or_search_below_for_a_single_medication_coupon">save up to 80% on all your prescriptions\nusing our free silver card or search\nbelow for a single medication coupon.</string>
    <string name="get_a_free_silver_givebackrx_card">get a free silver give<b>back</b>Rx Card</string>
    <string name="save_money_and_giveback_on_prescriptions_at_your_pharmacy">save money and give<b>back</b> on\nprescriptions at your pharmacy</string>
    <string name="send_coupon_via_phone">Enter your phone number to send this coupon to:</string>
    <string name="givebackrx_store">give<b>back</b>Rx store</string>
    <string name="we_know_givingback_feels_good">We know giving<b>back</b> feels good, and now giving<b>back</b> looks good, too. Get your limited edition give<b>back</b> t-shirt today!</string>
    <string name="xxxx_xxxx_xxxx_1234">XXXX-XXXX-XXXX-%s</string>
    <string name="delivery_here">Delivery Here</string>
    <string name="selected_address">Selected Address</string>
    <string name="select_address">Select Address</string>
    <string name="get_6_months_of_givebackrx_gold_membership_for_only_5_use_code_6for1">Get 6 Months of give<b>back</b>Rx Gold Membership for only $5! USE CODE | <b>6FOR1</b></string>
    <string name="givebackrx_stores">give<b>back</b>Rx Store</string>
    <string name="good">good.</string>
    <string name="well">well.</string>
    <string name="do_data">do</string>
    <string name="be_data">be</string>
    <string name="get_started">get started</string>
    <string name="sign_in">sign in</string>
    <string name="search_for_your_medication_to_find_the_cheapest_price_for_your_prescriptions_at_your_local_pharmacies">search for your medication to find the cheapest price for your prescriptions at your local pharmacies.</string>
    <string name="compare_prices">compare prices</string>
    <string name="find_your_prescription_here">find your prescription here</string>
    <string name="recent_searches">recent searches</string>
    <string name="charities">charities</string>
    <string name="select">Select</string>
    <string name="my_account">My Account</string>
    <string name="favorite_medications">Favorite Medications</string>
    <string name="recent_purchases">Recent Purchases</string>
    <string name="my_card">My Card</string>
    <string name="my_charity">My Charity</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_notice">My Notices</string>
    <string name="my_profile">My Profile</string>
    <string name="pharmacies_near_me">Pharmacies Near Me</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="sign_up_by_using">Sign Up by using</string>
    <string name="next">Next</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="hipaa_privacy_policy">HIPAA Privacy Policy</string>
    <string name="terms_of_service">Terms of Service,</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_ins">Sign In</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="sign_in_with">Sign in using </string>
    <string name="enter_your_email_address">enter your email address:</string>
    <string name="phone_numberss"> Phone Number</string>
    <string name="forgot_password_lower">forgot password</string>
    <string name="enter_your_email_address_to_reset_your_account_password">enter your email address to reset your account password.</string>
    <string name="passwordsmall">Password</string>
    <string name="sign_up_updte">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="thanks_for_nsigning_up">Thanks for\nsigning up.</string>
    <string name="your_application_is_under_nreview_we_will_take_up_to_n1_week_to_review">Your application is under\nreview we will take up to\n1 week to review.</string>
    <string name="get_started_cap">Get Started</string>
</resources>