<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".appcode.preSignUpModule.PreSignUpCheckActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/margin_1x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_xxxxxlarge"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/enter_your_email_address"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/phone_number"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/givebackroundedetbg"
        android:ems="10"
        android:fontFamily="@font/robotoregular"
        android:paddingStart="@dimen/margin_8x"
        android:paddingTop="@dimen/margin_2x"
        android:paddingEnd="@dimen/margin_2x"
        android:paddingBottom="@dimen/margin_2x"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/email_address"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/givebackroundedetbg"
        android:ems="10"
        android:fontFamily="@font/robotoregular"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_2x"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvText"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/sign_up_by_using"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btNext"
        app:layout_constraintEnd_toStartOf="@+id/tvEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:padding="5dp"
        android:text="@string/phone_numberss"
        android:visibility="visible"
        android:textColor="@color/button_color"
        android:textSize="@dimen/text_mediumLarge"
        app:layout_constraintBottom_toBottomOf="@+id/tvText"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvText"
        app:layout_constraintTop_toTopOf="@+id/tvText" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/givebackroundbutton"
        android:fontFamily="@font/robotoregular"
        android:text="@string/next"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/tvSignIn"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvText" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotoregular"
        android:padding="@dimen/margin_1x"
        android:text="@string/sign_ins"
        android:textColor="@color/button_color"
        android:textSize="@dimen/text_mediumLarge"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/btNext" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gray_color_new_lighter"
        android:fontFamily="@font/robotoregular"
        android:gravity="center"
        android:paddingStart="@dimen/margin_8x"
        android:paddingTop="@dimen/margin_1x"
        android:paddingEnd="@dimen/margin_8x"
        android:paddingBottom="@dimen/margin_1x"
        android:text="@string/by_continuing_you_agree_to_givebackrx_s_term_of_service"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/robotoregular"
        android:gravity="center"
        android:padding="@dimen/margin_1x"
        android:text="+1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/etPhoneNumber" />

    <CheckBox
        android:id="@+id/checkboxterms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/i_agree_to_the"
        android:textColor="@color/text_color"
        android:fontFamily="@font/robotoregular"
        android:textSize="@dimen/text_medium"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/mTvTerms"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/mTvTerms"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:text="@string/terms_of_service"
        android:fontFamily="@font/robotoregular"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/text_medium"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxterms"
        app:layout_constraintEnd_toStartOf="@+id/mTvPrivacy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkboxterms"
        app:layout_constraintTop_toTopOf="@+id/checkboxterms" />

    <TextView
        android:id="@+id/mTvPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:text="@string/privacy_policy"
        android:gravity="center"
        android:textColor="@color/blue_color"
        android:fontFamily="@font/robotoregular"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxterms"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTvTerms"
        app:layout_constraintTop_toTopOf="@+id/checkboxterms" />

    <CheckBox
        android:id="@+id/checkboxhippa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/i_agree_to_the"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:fontFamily="@font/robotoregular"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/checkboxterms" />

    <TextView
        android:id="@+id/mTvHippa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/hipaa_privacy_policy"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/text_medium"
        android:gravity="center|left"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxhippa"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/checkboxhippa"
        app:layout_constraintTop_toTopOf="@+id/checkboxhippa" />

</androidx.constraintlayout.widget.ConstraintLayout>