<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".appcode.loginEmailModule.LoginEmailActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/margin_1x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/forgot_password_lower"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_xxxxxlarge"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/enter_your_email_address_to_reset_your_account_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/email_address"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/givebackroundedetbg"
        android:ems="10"
        android:fontFamily="@font/robotoregular"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_2x"
        android:singleLine="true"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="20dp" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/sign_in_with"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/btNext"
        app:layout_constraintEnd_toStartOf="@+id/textSignin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/passwordsmall"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/btNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/givebackgreenround"
        android:gravity="center"
        android:paddingStart="40dp"
        android:paddingTop="12dp"
        android:paddingEnd="40dp"
        android:paddingBottom="12dp"
        android:text="@string/sign_up_updte"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_mediumLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNext"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/givebackroundbutton"
        android:fontFamily="@font/robotoregular"
        android:text="@string/submit"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>